fix sidebar collapse button positioning

--- a/src/migrator-management-canister-frontend/src/components/Sidebar/Sidebar.css
+++ b/src/migrator-management-canister-frontend/src/components/Sidebar/Sidebar.css
@@ -135,9 +135,15 @@
 .sidebar-collapse-tab.collapsed {
   position: fixed;
   left: 0;
-  top: 2rem;
+  top: 5rem !important;
   background: var(--background-secondary);
   z-index: 2001;
+}
+
+@media (max-width: 480px) {
+  .sidebar-collapse-tab.collapsed {
+    top: 4rem !important;
+  }
 }
 
 .sidebar.collapsed {
